css/style.css
/* ... */
.modTestimonials .slick-dots li button:before {
  font-size: 30px;
  top: -40px;
}

.modTestimonials h3.author{
  margin-bottom:0;
}

.modTestimonials.simple {
  padding: 0;
}
.modTestimonials.simple .author .author-avatar {
  float: left;
  margin-right: 15px;
}
.modTestimonials.simple .author .author-name {
  padding-top: 30px;
}
.modTestimonials.simple .author .author-name strong {
  color: #333;
}
.modTestimonials.simple .slick-slider {
  margin-bottom: 10px;
}

.fullscreen {
  min-height:700px;
  height:100vh;
  position:relative;
  max-height:1500px;
  background-size:cover;
  overflow:hidden;
}

#fullscreen-video {
  width:100%;
  height:100%;
  display:block;
  object-fit:cover;
  position:absolute;
  left:0;
  top:0;
}

.fullscreen .overlay {
  background-image: -webkit-linear-gradient(#000 0%, #000 60%, #000);
  background-image: linear-gradient(#000 0%, #000 60%, #000);
  opacity:0.5;
  position:relative;
  z-index:0;
  width:100%;
  top:0;
  left:0;
  height:100%;
}

.fullscreen .layer {
  position:absolute;
  z-index:4;
  width:94%;
  max-width: 1280px;
  left:0;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
  margin: 0 auto;
  padding: 0;
}

p.small-title {
  text-transform:uppercase;
  color:#E6782F;
  margin-bottom:30px;
  letter-spacing:4px;
  font-size:14px;
  font-weight:700;
  font-family: 'Montserrat', sans-serif;
}

.fullscreen .layer h1 {
  color:#fff;
  font-size: 72px;
  font-weight: 800;
  letter-spacing: 0;
  line-height:1.1em;
  text-transform:none;
}

.fullscreen .layer h1::after {
  content:"";
  width:40px;
  height:4px;
  background:#E6782F;
  display:block;
  margin:20px 0 0;
}

.fullscreen .layer h1 strong {
  color:#E6782F;
  -webkit-transition-property:all;
  -moz-transition-property:all;
  transition-property:all;
  -webkit-transition-duration:.1s;
  -moz-transition-duration:.1s;
  transition-duration:.1s;
}

.fullscreen .layer h2 {
  color:#ccc;
  font-size:16px;
  letter-spacing:1px;
  margin-bottom:15px;
  font-weight:300;
  text-transform:none;
  line-height:1.6em;
  width:62%;
}

.fullscreen .layer h2 a:hover {
  color:#fff;
  text-decoration:underline;
}

.fullscreen .layer ul li {
  display:inline;
  text-transform:uppercase;
  color:#ccc;
  letter-spacing:2px;
  background:url(../images/@stock/li-item.png) left center no-repeat;
  padding:0 10px 0 20px;
}

.fullscreen .layer ul li:first-child {
  background:none;
}

.fullscreen .layer.alt {
  top:40%;
}

.fullscreen .layer.alt h1 {
  font-size:60px;
  letter-spacing:15px;
}

.fullscreen .scroll-down {
  position:absolute;
  z-index:4;
  bottom:5%;
  text-align:center;
  left:50%;
  margin-left:-12px;
}

.fullscreen .scroll-down i {
  width:40px;
  font-size:40px;
  color:#666;
}

.new-tag{
  color:#E6782F;
  transform: rotate(-25deg);
  position: absolute;
}
.latest-news {
  width: 100%;
  height: 100%;
  position: relative;
}
.latest-news a {
  position: absolute;
  top: 100%;
  left: 0;
  visibility: hidden;
  opacity: 0;
  font-size: 1.6rem;
  transition: all 0.6s;
}
.latest-news a:hover {
  color: #fff;
}
.latest-news a.active {
  visibility: visible;
  opacity: 1;
  top: 50%;
  transform: translateY(-50%);
}
.fullscreen .announcements {
  position: absolute;
  bottom: 0;
  height: 80px;
  background-color: rgba(0, 0, 0, 0.3);
  display: flex;
  align-items: center;
  column-gap: 14px;
  left: 0;
  right: 0;
  padding: 10px 5.4%;
}

.fullscreen .announcements h1 {
  color:#fff;
  font-size:5em;
  font-weight:500;
  letter-spacing:0;
  line-height:1.1em;
}

.fullscreen .announcements h3 {
  color:#bbbbbb;
  font-size:20px;
  text-transform:none;
  margin: 0;
  flex: none;
}

#main.top-shift {
  margin: 0;
}

/*faq*/
.faq-highlight {
  background-color: #fffbe6;
}
.section-faq {
  position: relative;
  padding: 4rem 1rem 2rem;
}
.faq-row {
  width: 100%;
  max-width: 1024px;
  margin: 0 auto;
  padding-bottom: 6rem;
  display: flex;
  column-gap: 2rem;
}
.faq-content {
  padding-left: 2rem;
}
.faq-content .intro-text {
  margin-bottom: 0;
}
.faq-categories {
  position: relative;
  flex: none;
  padding: 0 2rem;
}
.field-wrapper {
  position: sticky;
  top: 120px;
}
.faq-categories .section-list{
  list-style-type: none;
  margin: 0;
  padding: 0;
  font-size: 18px;
}
.faq-categories li {
  max-width: 250px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  padding: 4px 0;
  border-bottom: 1px solid #e7e7e7;
}
.faq-categories li + li{
  margin-top: 10px;
}
.faq-categories .sub-links li:last-child {
  border-bottom: none;
}
.page-title {
  text-align: center;
  padding: 2rem 1rem;
}
.section-head {
  padding: 4rem 0 1rem;
}
.section-head h3 {
  font-size: 2rem;
  text-transform: none;
}
.faq-item {
  position: relative;
  scroll-margin-top: 170px;
  transition: background-color 0.6s;
}
.toggle-checkbox {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
}
.faq-item .toggle-label {
  position: relative;
  display: block;
  margin: 0;
  font-size: 1.4rem;
  font-weight: 500;
  padding: 1rem 3rem 1rem 0;
  border-bottom: 1px solid #E6782F;
}
.toggle-checkbox:checked ~ .item-content {
  display: block;
  border-bottom: 1px solid #E6782F;
}
.item-content {
  display: none;
  padding: 1rem 2rem 2rem 0;
}
.toggle-label::after {
  position: absolute;
  content: '+';
  right: 0;
  top: 12px;
  font-size: 32px;
  font-weight: 400;
  line-height: 1;
  color: #a7a7a7;
  z-index: 0;
}
.toggle-checkbox:checked + .toggle-label::after {
  content: '-';
  font-size: 40px;
  top: 6px;
}
.toggle-checkbox:checked + .toggle-label {
  border-bottom-color: transparent;
}
.section-link {
  scroll-margin-top: 150px;
}
.anchor-link {
  color: #d1d1d1;
  scroll-margin-top: 120px;
}
.quick-link-anchor {
  display: none;
  color: #d1d1d1;
  scroll-margin-top: 120px;
  font-weight: 400;
  font-size: 20px;
  position: absolute;
  left: -18px;
  top: 2px;
}
.toggle-label .quick-link-anchor {
  top: 16px;
  left: -26px;
  padding-right: 10px;
}
/* ... */

